--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,63 +2,66 @@
 <div class="continer" dir="rtl">
     
 
-<div class="page-title"><h1>| نظام تقييم الاساتذة</h1></div>
+  <div class="page-title">
+    <h1>| نظام تقييم الاساتذة</h1>
+    
+  </div>
 
 
 
-  <div class="form-continer">
+    <div class="form-continer">
 
-    <form class="ui form " >
-        <div class=" item" >
-         
+      <form class="ui form " >
+          <div class=" item" >
           
-            <select class="ui search dropdown" >
-              <option value="">حدد قسمك</option>
-              <option value="AL">علوم الحياة</option>
-              <option value="AK">علوم الحاسبات</option>
-              <option value="AZ">علوم رياضيات</option>
-              <option value="AR">علوم الفيزياء</option>
-              <option value="IA">جيولوجيا</option>
-              <option value="IA">تقانة احيائية</option>
-            </select>
-        
-        </div>
-
-
-        <div class="item" >
-            
             
               <select class="ui search dropdown" >
-                <option value="">حدد المرحلة</option>
-                <option value="AL">الاولى</option>
-                <option value="AK">الثانية</option>
-                <option value="AZ">الثالثة</option>
-                <option value="AR">الرابعة</option>
-  
+                <option value="">حدد قسمك</option>
+                <option value="AL">علوم الحياة</option>
+                <option value="AK">علوم الحاسبات</option>
+                <option value="AZ">علوم رياضيات</option>
+                <option value="AR">علوم الفيزياء</option>
+                <option value="IA">جيولوجيا</option>
+                <option value="IA">تقانة احيائية</option>
               </select>
+          
+          </div>
+
+
+          <div class="item" >
+              
+              
+                <select class="ui search dropdown" >
+                  <option value="">حدد المرحلة</option>
+                  <option value="AL">الاولى</option>
+                  <option value="AK">الثانية</option>
+                  <option value="AZ">الثالثة</option>
+                  <option value="AR">الرابعة</option>
+    
+                </select>
+              
+
+            </div>
+          <div class="item">
+            
+            
+            <input name="last-name" placeholder="كلمة السر " type="password">
+            
             
 
           </div>
-        <div class="item">
-          
-          
-           <input name="last-name" placeholder="كلمة السر " type="password">
-          
-          
 
-        </div>
-
-       
-
-        <div class="bt-item">
-            
-         <button class="ui button" type="submit">تسجيل الدخول</button>
-       
-        </div>
-       
         
-      </form>
-  </div>
+
+          <div class="bt-item">
+              
+          <button class="ui button" type="submit">تسجيل الدخول</button>
+        
+          </div>
+        
+          
+        </form>
+    </div>
   <div class="footer">
       <a>دخول المشرفين</a>
   </div>
