--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     
 
   <div class="page-title">
-    <h1>| نظام تقييم الاساتذة</h1>
+    <h1>| نظام تقييم الاساتذة - دخول الطلبة</h1>
     
   </div>
 
