--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -22,6 +22,8 @@
         </div> 
     </div>
 
+
+    
  <!-- table -->
     <div class="table-continer">
       <table class="ui compact celled definition table ui form">
@@ -60,6 +62,20 @@
             </tr>
           </tbody>
           <tfoot class="full-width">
+              <tr>
+                  <th>
+
+                  </th>
+                  <th colspan="4" >
+                      <div class="field">
+                          <label>أضافة ملاحظات</label>
+                          <textarea rows="2"></textarea>
+                        </div>
+
+    
+                  </th>
+                </tr>
+
             <tr>
               <th></th>
               <th colspan="4">
