Replace With Bootstrap

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,73 +1,62 @@
 <img src="../../assets/img/Symbol 1 – 2.svg">
-<div class="continer" dir="rtl">
-    
 
+<div class="continer" dir="rtl">
+
+  <!-- the title  -->
   <div class="page-title">
-<<<<<<< HEAD
-    <h1>| نظام تقييم الاساتذة</h1>
-=======
     <h1>| نظام تقييم الاساتذة - دخول الطلبة</h1>
-    
->>>>>>> 0dca21f89a6f1a159d406a0bad5802a7d79d300b
+
   </div>
 
+  <!-- the form -->
+  <div class="form-continer">
+
+    <form class="ui form ">
+      <div class=" item">
 
 
-    <div class="form-continer">
+        <select class="ui search dropdown">
+          <option value="">حدد قسمك</option>
+          <option value="AL">علوم الحياة</option>
+          <option value="AK">علوم الحاسبات</option>
+          <option value="AZ">علوم رياضيات</option>
+          <option value="AR">علوم الفيزياء</option>
+          <option value="IA">جيولوجيا</option>
+          <option value="IA">تقانة احيائية</option>
+        </select>
 
-      <form class="ui form " >
-          <div class=" item" >
-          
-            
-              <select class="ui search dropdown" >
-                <option value="">حدد قسمك</option>
-                <option value="AL">علوم الحياة</option>
-                <option value="AK">علوم الحاسبات</option>
-                <option value="AZ">علوم رياضيات</option>
-                <option value="AR">علوم الفيزياء</option>
-                <option value="IA">جيولوجيا</option>
-                <option value="IA">تقانة احيائية</option>
-              </select>
-          
-          </div>
+      </div>
 
 
-          <div class="item" >
-              
-              
-                <select class="ui search dropdown" >
-                  <option value="">حدد المرحلة</option>
-                  <option value="AL">الاولى</option>
-                  <option value="AK">الثانية</option>
-                  <option value="AZ">الثالثة</option>
-                  <option value="AR">الرابعة</option>
-    
-                </select>
-              
+      <div class="item">
 
-            </div>
-          <div class="item">
-            
-            
-            <input name="last-name" placeholder="كلمة السر " type="password">
-            
-            
 
-          </div>
+        <select class="ui search dropdown">
+          <option value="">حدد المرحلة</option>
+          <option value="AL">الاولى</option>
+          <option value="AK">الثانية</option>
+          <option value="AZ">الثالثة</option>
+          <option value="AR">الرابعة</option>
+        </select>
 
-        
 
-          <div class="bt-item">
-              
-          <button class="ui button" type="submit">تسجيل الدخول</button>
-        
-          </div>
-        
-          
-        </form>
-    </div>
+      </div>
+      
+      <div class="item">
+        <input name="last-name" placeholder="كلمة السر " type="password">
+      </div>
+
+      <div class="bt-item">
+        <button class="ui button" type="submit">تسجيل الدخول</button>
+      </div>
+
+    </form>
+
+  </div>
+
+  <!-- footer  -->
   <div class="footer">
-      <a>دخول المشرفين</a>
+    <a>دخول المشرفين</a>
   </div>
 
 </div>
