--- a/src/app/evaluation/evaluation.component.css
+++ b/src/app/evaluation/evaluation.component.css
@@ -1,49 +1,44 @@
 * {
     font-family: 'Segoe UI';
 }
-.continer{
-   
+
+.continer {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
-   justify-content: center;
-   align-items: center;
-  align-content: center;
-  overflow: hidden;
-  
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    overflow: hidden;
 }
-.table-continer{
-    
- 
+
+.table-continer {
     width: 55vw;
     margin: 10px 0 0 0;
 }
-.table-continer table{
-   
-    
-}
- table thead tr th{
- text-align: center;
- }
- table tbody tr td{
-     text-align:right;
- }
 
-.select-tech{
+td, th {
+    text-align: center;
+    /* center checkbox horizontally */
+    vertical-align: middle;
+    /* center checkbox vertically */
+}
+
+.select-tech {
     width: 55vw;
     /* padding: 40px; */
 }
 
 /* Title */
-.continer .page-title{
+
+.continer .page-title {
     color: rgb(0, 0, 0);
     position: absolute;
-  right: 50px;
+    right: 50px;
     top: 50px;
-    
- }
+}
 
- .continer .page-title h1{
+.continer .page-title h1 {
     text-align: right;
 }
