--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -1,98 +1,75 @@
 <!-- the continer -->
-<div class="continer" dir="rtl">
+<div class="continer">
 
-  <!-- page title -->
+  <!-- page title
     <div class="page-title">
         <h1>عزيزي الطالب | عزيزتي الطالبة (يرجى الاجابة عن الفقرات الاتية بدقة وموضوعية ولا داعي لذكر الاسم) </h1>
         
+    </div> -->
+
+  <!-- dropdown selector -->
+  <div class="select-tech">
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <label class="input-group-text" for="inputGroupSelect01">اسم التدريسي</label>
+      </div>
+      <select class="custom-select" id="inputGroupSelect01">
+        <option value="AF">علي عبد الرحمن</option>
+        <option value="AX">حازم نومان</option>
+        <option value="AL">غسان اسماعيل</option>
+      </select>
     </div>
-   
-    <!-- dropdown selector -->
-    <div class="select-tech">
-        <div class="ui form">
-            <div class="field">
-              <select class="ui search dropdown">
-                <option value="">حدد أسم التدريسي</option>
-                <option value="AF">Afghanistan</option>
-                <option value="AX">Åland Islands</option>
-                <option value="AL">Albania</option>
-    
-              </select>
-            </div>
-        </div> 
-    </div>
-
-
-    
- <!-- table -->
-    <div class="table-continer">
-      <table class="ui compact celled definition table ui form">
-          <thead>
-            <tr>
-              
-              <th width="5%">ت</th>
-              <th width="60%">الفقرات</th>
-              <th width="10%">نعم</th>
-              <th width="10%">نوعا ما</th>
-              <th width="10%">لا</th>
-
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>John Lilki</td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Jamie Harington</td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td >3</td>
-              <td>Jill Lewis</td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-          </tbody>
-          <tfoot class="full-width">
-              <tr>
-                  <th>
-
-                  </th>
-                  <th colspan="4" >
-                      <div class="field">
-                          <label>أضافة ملاحظات</label>
-                          <textarea rows="2"></textarea>
-                        </div>
-
-    
-                  </th>
-                </tr>
-
-            <tr>
-              <th></th>
-              <th colspan="4">
-                
-                <div class="ui left floated small primary labeled icon button">
-                   أرسال
-                </div>
-
-              </th>
-            </tr>
-          </tfoot>
-        </table>
-    </div>
-</div>  
+  </div>
 
 
 
+  <div class="table-continer">
+    <table class="table">
+      <thead>
+        <tr>
+
+          <th width="5%">ت</th>
+          <th width="60%">الفقرات</th>
+          <th width="10%">نعم</th>
+          <th width="10%">نوعا ما</th>
+          <th width="10%">لا</th>
+
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td width="5%">1</td>
+          <td width="60%">السؤال الاول</td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+        </tr>
+        <tr>
+          <td width="5%">1</td>
+          <td width="60%">السؤال الثاني</td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+        </tr>
+        <tr>
+          <td width="5%">3</td>
+          <td width="60%">السؤال الثالث</td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+        </tr>
+
+        <tr>
+          <td>
+              <textarea id="note" class="form-text form-control "> </textarea>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+  <button class="btn btn-primary pull-left" >ارسال التقييم</button>
+  </div>
 
 
-  
+
+</div>
