Change page content to bootstrab

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,44 +1,43 @@
-<img src="../../assets/img/Symbol 1 – 2.svg">
 <div class="continer" dir="rtl">
-    
+
 
   <div class="page-title">
     <h1>| نظام تقييم الاساتذة - دخول المشرفين</h1>
-    
+
   </div>
 
 
 
-    <div class="form-continer">
+  <div class="form-continer">
 
-      <form class="ui form " >
+    <p>
+      قم بكتابة اسم المستخدم وكلمة المرور لتسجيل الدخول
+    </p>
+    <form class="ui form ">
 
 
-          <div class="item">
-          
-            <input name="last-name" placeholder="أسم المستخدم" type="text">
-            
-          </div>
+      <div class="item">
 
-          <div class="item">
-          
-              <input name="last-name" placeholder="كلمة السر " type="password">
-              
-            </div>
+        <input class="form-control" type="text" placeholder="اسم المستخدم">
 
-        
+      </div>
 
-          <div class="bt-item">
-              
-          <button class="ui button" type="submit">تسجيل الدخول</button>
-        
-          </div>
-        
-          
-        </form>
-    </div>
-  <div class="footer">
-      <a>دخول المشرفين</a>
+      <div class="item">
+
+        <input class="form-control" type="password" placeholder="كلمة السر">
+
+      </div>
+
+
+
+      <div class="bt-item">
+
+        <button class="btn btn-primary pull-left">تسجيل الدخول</button>
+
+      </div>
+
+
+    </form>
   </div>
 
 </div>
