--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,75 +1,78 @@
-body{
+body {
     overflow: hidden;
 }
+
 * {
     font-family: 'Segoe UI';
 }
+
 /* main continer */
-.continer{
-   
+
+.continer {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
-   justify-content: center;
-   align-items: center;
-  align-content: center;
-  overflow: hidden;
-  
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    overflow: hidden;
 }
-/* Title */
-.continer .page-title{
-    color: aliceblue;
-    position: absolute;
-  right: 50px;
-    top: 50px;
-    
- }
 
- .continer .page-title h1{
+/* Title */
+
+.continer .page-title {
+    /* color: aliceblue; */
+    position: absolute;
+    right: 50px;
+    top: 50px;
+}
+
+.continer .page-title h1 {
     text-align: right;
 }
+
 /* form continer */
-.form-continer{
-    
-    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
+
+p {
+    color: #545454;
+    font-size: 14px;
+}
+.form-continer {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
     border-color: rgb(48, 129, 129);
-   width: 33vw;
-   padding: 40px;
-   border-radius: 30px;
-   background-color: rgb(255, 255, 255);
-
-}
-
-.form-continer .item{
-    margin: 0 0 10px 0; 
+    width: 33vw;
+    padding: 40px;
     border-radius: 30px;
-   
-}
-.form-continer .bt-item{
-    text-align:left;
-    margin:10px 0 0 0;
-    
+    background-color: rgb(255, 255, 255);
 }
 
-.form-continer button{
-    width:10vw ;
-    
+.form-continer .item {
+    margin: 0 0 10px 0;
+    border-radius: 30px;
 }
 
+.form-continer .bt-item {
+    text-align: left;
+    margin: 10px 0 0 0;
+}
 
-img{
-    
+.form-continer button {
+    width: 10vw;
+}
+
+img {
     position: absolute;
     top: -110%;
     left: -10%;
     z-index: -1;
     transform: rotate(-10deg);
     width: 125%
-    
 }
+
 /* footer */
-.continer .footer{
+
+.continer .footer {
     position: absolute;
     bottom: 50px;
 }
