--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -4,6 +4,7 @@
 
 body{
     overflow: hidden;
+    max-width: 100vw;
 }
 
 /* main continer */
@@ -21,10 +22,10 @@ body{
 
 /* Title */
 .continer .page-title{
-    color: aliceblue;
+    /* color: aliceblue; */
     position: absolute;
     right: 50px;
-      top: 50px;
+    top: 50px;
     
  }
 
