--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,41 +1,37 @@
+<div class="bg-continer">
+  <div class="bac-color">
+    <table height="100%">
+      <td><div class="PageLine2V">&nbsp;</div></td>
+    </table>
+  </div>
+</div>
+
 <div class="continer" dir="rtl">
 
-
+  <!-- title of page -->
   <div class="page-title">
     <h1>| نظام تقييم الاساتذة - دخول المشرفين</h1>
-
   </div>
 
 
-
+  <!-- form of content  -->
   <div class="form-continer">
 
-    <p>
-      قم بكتابة اسم المستخدم وكلمة المرور لتسجيل الدخول
-    </p>
+    <p> قم بكتابة اسم المستخدم وكلمة المرور لتسجيل الدخول </p>
+
     <form class="ui form ">
 
-
       <div class="item">
-
         <input class="form-control" type="text" placeholder="اسم المستخدم">
-
       </div>
 
       <div class="item">
-
         <input class="form-control" type="password" placeholder="كلمة السر">
-
       </div>
-
-
 
       <div class="bt-item">
-
         <button class="btn btn-primary pull-left">تسجيل الدخول</button>
-
       </div>
-
 
     </form>
   </div>
