--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,12 @@
+<div class="bg-continer">
+  <div class="bac-color">
+    <table height="100%">
+      <td>
+        <div class="PageLine2V">&nbsp;</div>
+      </td>
+    </table>
+  </div>
+</div>
 
 <div class="continer" dir="rtl">
 
@@ -44,22 +53,22 @@
         </div>
 
       </div>
-      
+
       <div class="item">
-        <input class="form-control" type="text" placeholder="كلمة السر">
+        <input class="form-control" type="password" placeholder="كلمة السر">
       </div>
 
       <div class="bt-item">
-        <button class="btn btn-primary pull-left" >تسجيل الدخول</button>
+        <button class="btn btn-primary pull-left">تسجيل الدخول</button>
       </div>
+
 
     </form>
 
   </div>
 
-  <!-- footer  -->
-  <div class="footer">
-    <a>دخول المشرفين</a>
-  </div>
-
+</div>
+<!-- footer  -->
+<div class="footer">
+  <a>دخول المشرفين</a>
 </div>
