--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,6 +7,25 @@ body{
     max-width: 100vw;
 }
 
+.bg-continer {
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
+    position: absolute;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.bac-color {
+    width: 200vw;
+    content: "";
+    min-height: 100%;
+    background-color: #201A26;
+    height: 200vh;
+    transform: rotate(45deg);
+}
+
 /* main continer */
 
 .continer {
@@ -22,7 +41,6 @@ body{
 
 /* Title */
 .continer .page-title{
-    /* color: aliceblue; */
     position: absolute;
     right: 50px;
     top: 50px;
@@ -31,6 +49,7 @@ body{
 
  .continer .page-title h1{
     text-align: right;
+    font-size: 2vw;
 }
 
 /* form continer */
@@ -68,7 +87,10 @@ img {
     
 }
 /* footer */
-.continer .footer{
+.footer{
+    width: 100%;
     position: absolute;
     bottom: 50px;
+    text-align: center;
+    color: #FFFFFF;
 }
