--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="bac-color">
     <table height="100%">
       <td>
-        <div class="PageLine2V">&nbsp;</div>
+        <div>&nbsp;</div>
       </td>
     </table>
   </div>
