--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -22,11 +22,21 @@
     <form class="ui form ">
 
       <div class="item">
-        <input class="form-control" type="text" placeholder="اسم المستخدم">
+        <div class="input-group mb-2">
+            <div class="input-group-prepend">
+              <div class="input-group-text" style="width: 125px" >اسم المستخدم</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
+        </div>
       </div>
 
       <div class="item">
-        <input class="form-control" type="password" placeholder="كلمة السر">
+          <div class="input-group mb-2">
+              <div class="input-group-prepend">
+                <div class="input-group-text"  style="width: 125px" >كــــلمـة الـمــرور</div>
+              </div>
+              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
+          </div>
       </div>
 
       <div class="bt-item">
