--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -40,7 +40,10 @@
       </div>
 
       <div class="bt-item">
-        <button class="btn btn-primary pull-left">تسجيل الدخول</button>
+          <a routerLink="/generateKey">
+            <button class="btn btn-primary pull-left" >تسجيل الدخول</button>
+          </a>
+       
       </div>
 
     </form>
