--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -59,7 +59,10 @@
       </div>
 
       <div class="bt-item">
-        <button class="btn btn-primary pull-left">تسجيل الدخول</button>
+          <a routerLink="/evalution">
+            <button class="btn btn-primary pull-left" >تسجيل الدخول</button>
+          </a>
+       
       </div>
 
 
@@ -70,5 +73,5 @@
 </div>
 <!-- footer  -->
 <div class="footer">
-  <a>دخول المشرفين</a>
+  <a routerLink="/admin">دخول المشرفين</a>
 </div>
