--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="bt-item">
-          <a routerLink="/generateKey">
+          <a routerLink="/management">
             <button class="btn btn-primary pull-left" >تسجيل الدخول</button>
           </a>
        
