--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,1 @@
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-<app-admin></app-admin>
-=======
-<app-management></app-management>
->>>>>>> 8a498a83bb6f0d40bb96fd9bda12da5d0d46b46f
-=======
-<!-- <router-outlet></router-outlet> -->
-<app-teaching-staff></app-teaching-staff>
-
->>>>>>> 1c23207a916cfe86606fcbd495605f7565baee79
+<router-outlet></router-outlet>
