Lecturer get,delete,add

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -10,6 +10,7 @@
 
   <!-- title of page -->
   <div class="page-title">
+      <!-- <img src="../../assets/SciLogo.png" alt=""> -->
     <h1>| نظام تقييم الاساتذة - دخول المشرفين</h1>
   </div>
 
