--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -59,13 +59,14 @@
           <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
         </tr>
 
-        <tr>
-          <td>
-              <textarea id="note" class="form-text form-control "> </textarea>
-          </td>
-        </tr>
       </tbody>
     </table>
+
+    <p>
+      من فضلك قم باضافة بعض الملاحضات عن الاستاذ ( كًن صريحاً و صادقاً في  ملاحضاتك رجاءً )
+    </p>
+    
+    <textarea id="note" class="form-text form-control "> </textarea>
 
   <button class="btn btn-primary pull-left" >ارسال التقييم</button>
   </div>
