--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,6 +12,7 @@
 
   <!-- the title  -->
   <div class="page-title">
+    <img src="../../assets/SciLogo.png" alt="">
     <h1>| نظام تقييم الاساتذة - دخول الطلبة</h1>
   </div>
 
