--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -23,12 +23,16 @@ body {
 
 /* Title */
 
-.continer .page-title {
-    /* color: aliceblue; */
+.continer .page-title{
     position: absolute;
     right: 50px;
     top: 50px;
-}
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center; 
+ }
+
 
 .continer .page-title h1 {
     text-align: right;
