--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -1,33 +1,11 @@
-<div class="navbar navbar-expand-lg navbar-light  nav-bar">
-  <a class="navbar-brand" href="#">الرئيسية</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="navbar-brand" href="#">الكادر التدريسي</a>
-  
-        </li>
-        <li class="nav-item">
-            <a class="navbar-brand" href="#">توليد الرموز</a>
-        </li>
-  
-      </ul>
-      
-    </div>
 
+<app-nav> </app-nav>
 
-    <div class="collapse navbar-collapse" id="navbarNav" dir="ltr">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-              <a class="navbar-brand" href="#">تسجيل الخروج</a>
-          </li>
-        </ul>
-      </div>
-</div>
-
+<p class="top-text"> يمكنك تحديد القسم العلمي والمرحلة لأضهار تقييمات الاستاذة في هذا القسم </p>
 <div class="drop-down">
+
+
+
     <select class="custom-select select-1">
         <option selected>حدد القسم </option>
         <option value="1">علوم الحياة</option>
@@ -38,7 +16,6 @@
         <option value="6">تقانة احيائية</option>
     </select>
 
-
     <select class="custom-select select-1">
         <option selected>حدد المرحلة</option>
         <option value="1">الاولى</option>
@@ -46,67 +23,37 @@
         <option value="3">الثالثة</option>
         <option value="4">الرابعة</option>
     </select>
+
+    <a class="my-btn btn btn-primary select-2" href="#" role="button" style="width: 100px">بحث</a>
 </div>
 
-<div class="main-box">
-  <div class="box-item">
-      <div class="prof-name">
-          حازم نومان
-        </div>
-      <div class="progress range">
-          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-        </div>
-  </div>
-  <div class="box-item">
-      <div class="prof-name">
-          حازم نومان
-        </div>
-        
-            <div class="progress range">
-                <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-              </div>
-        
 
-  </div>
-
-
-  <div class="box-item">
-      <div class="prof-name">
-          حازم نومان
-        </div>
-      <div class="progress range ">
-          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-        </div>
-  </div>
-
-
-  <div class="box-item">
-      <div class="prof-name">
-          حازم نومان
-        </div>
-      <div class="progress range">
-          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-        </div>
-  </div>
-
-  <div class="box-item">
-      <div class="prof-name">
-          حازم نومان
-        </div>
-      <div class="progress range">
-          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-        </div>
-  </div>
-
-
-  <div class="box-item">
-      <div class="prof-name">
-          حازم نومان
-        </div>
-      <div class="progress range">
-          <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-        </div>
-  </div>
-
-
+<!-- item  -->
+<div class="box-item">
+    <div class="name">  <h3> أ. م. حازم نومان عبد </h3>  </div>
+    <div class="progress">
+        <div style="width:90%"> <span> 90% &nbsp;</span> </div>
+        <P> عدد الطلاب الذين قامو بالتصويت : 20</P>
+    </div>
 </div>
+
+<!-- item  -->
+<div class="box-item">
+    <div class="name">  <h3> أ. م. طه عبد علي </h3>  </div>
+    <div class="progress">
+        <div style="width:70%"> <span> 70% &nbsp;</span> </div>
+        <P> عدد الطلاب الذين قامو بالتصويت : 30</P>
+    </div>
+</div>
+
+
+<!-- item  -->
+<div class="box-item">
+    <div class="name">  <h3> أ. م. علي عبد الرحمن </h3>  </div>
+    <div class="progress">
+        <div style="width:80%"> <span> 80% &nbsp;</span> </div>
+        <P> عدد الطلاب الذين قامو بالتصويت : 55</P>
+    </div>
+</div>
+    
+    
