--- a/src/app/teaching-staff/teaching-staff.component.html
+++ b/src/app/teaching-staff/teaching-staff.component.html
@@ -1,141 +1,51 @@
-<div class="navbar navbar-expand-lg navbar-light  nav-bar">
-    <a class="navbar-brand" href="/">الرئيسية</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-              <a class="navbar-brand" href="#">الكادر التدريسي</a>
-     
-          </li>
-          <li class="nav-item">
-              <a class="navbar-brand" href="/generateKey">توليد الرموز</a>
-          </li>
-    
-        </ul>
-        
-      </div>
-  
-  
-      <div class="collapse navbar-collapse" id="navbarNav" dir="ltr">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="navbar-brand" href="/login">تسجيل الخروج</a>
-            </li>
-          </ul>
-        </div>
-  </div>
+<app-nav></app-nav>
 
-
-<div class="tex">
-  <h5>حدد القسم والمرحلة وعدد الرمز المراد توليدها</h5>
-</div>
-
-
-
+<p class="top-text"> حدد القسم و المرحلة وقم بكتابة اسم الستاذ لأضافته الى قائمة التقييم </p>
 <div class="drop-down">
-    <select class="custom-select select-1">
-        <option selected>حدد القسم </option>
-        <option value="1">علوم الحياة</option>
-        <option value="2">علوم الحاسبات</option>
-        <option value="3">علوم رياضيات</option>
-        <option value="4">علوم الفيزياء</option>
-        <option value="5">جيولوجيا</option>
-        <option value="6">تقانة احيائية</option>
+
+
+
+    <select id="departments" class="custom-select select-1" (change)="selectDepartment( $event )" >
+        <option value="0">حدد القسم         </option>
+        <option value="1"> بايولوجي        </option>
+        <option value="2"> الحاسبات        </option>
+        <option value="3"> الرياضيات       </option>
+        <option value="4"> الفيزياء        </option>
+        <option value="5"> جيولوجيا النفط والمعادن        </option>
+        <option value="6"> تقانة احيائية   </option>
     </select>
 
-
-    <select class="custom-select select-1">
-        <option selected>حدد المرحلة</option>
-        <option value="1">الاولى</option>
-        <option value="2">الثانية</option>
-        <option value="3">الثالثة</option>
-        <option value="4">الرابعة</option>
+    <select  id="stages" #stages class="custom-select select-1" (change)="selectstage( $event )" >
+        <option value="0">  حدد المرحلة     </option>
+        <option value="1">  الاولى           </option>
+        <option value="2">  الثانية         </option>
+        <option value="3">  الثالثة         </option>
+        <option value="4">  الرابعة         </option>
     </select>
 
-    <select class="custom-select select-1">
-        <option selected>حدد المادة</option>
-        <option value="1">الاولى</option>
-        <option value="2">الثانية</option>
-        <option value="3">الثالثة</option>
-        <option value="4">الرابعة</option>
-    </select>
+    <div class="input-group select-1">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-sizing-default"> اسم الاستاذ </span>
+        </div>
+        <input (change)="selectName( $event )" type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+    </div>
 
-    <select class="custom-select select-2">
-        <option selected>عدد الرموز</option>
-        <option value="1">الاولى</option>
-        <option value="2">الثانية</option>
-        <option value="3">الثالثة</option>
-        <option value="4">الرابعة</option>
-    </select>
-
-    <a class="btn btn-primary select-2" href="#" role="button">أضافة تدريسي</a>
-
+    <a class="my-btn btn btn-primary select-2" role="button" style="width: fit-content" 
+     (click)="addLecturers()"> اضافة </a>
 </div>
 
+<!-- items  -->
+<div class="box-item" *ngFor="let item of lecturers">
 
+    <!-- information dispaly hear -->
+    <div class="name">
+        <h3> {{ item.name }} </h3>
+    </div>
 
+    <div class="box-operation">
+        <button class="btn-delete btn" (click)="deleteLecturer(item)">
+            <i class="i-delete fas fa-trash-alt fa-1x"></i>
+        </button>
+    </div>
 
-<div class="main-box">
-    <div class="box-item">
-        <div class="prof-name">
-            حازم نومان
-          </div>
-        <div class="progress range">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-          </div>
-    </div>
-    <div class="box-item">
-        <div class="prof-name">
-            حازم نومان
-          </div>
-          
-              <div class="progress range">
-                  <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                </div>
-          
-  
-    </div>
-  
-  
-    <div class="box-item">
-        <div class="prof-name">
-            حازم نومان
-          </div>
-        <div class="progress range ">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-          </div>
-    </div>
-  
-  
-    <div class="box-item">
-        <div class="prof-name">
-            حازم نومان
-          </div>
-        <div class="progress range">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-          </div>
-    </div>
-  
-    <div class="box-item">
-        <div class="prof-name">
-            حازم نومان
-          </div>
-        <div class="progress range">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-          </div>
-    </div>
-  
-  
-    <div class="box-item">
-        <div class="prof-name">
-            حازم نومان
-          </div>
-        <div class="progress range">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-          </div>
-    </div>
-  
-  
-  </div>
+</div>
