--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,6 @@
     height: 200vh;
     transform: rotate(45deg);
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
