--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -7,54 +7,31 @@
     <div class="input-group-prepend">
       <span class="input-group-text" id="inputGroup-sizing-default"> عنوان السؤال </span>
     </div>
-    <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+    <input  (change)="selectQuestion($event)" 
+            type="text" class="form-control" 
+            aria-label="Default" 
+            aria-describedby="inputGroup-sizing-default">
   </div>
 
-  <a class="my-btn btn btn-primary select-2" href="#" role="button" style="width: fit-content"> اضافة </a>
+      <div class="box-operation">
+          <button 
+              mat-raised-button
+              matTooltip="تأكد من المعلومات قبل الاضافة"
+              matTooltipPosition="right"
+              class="btn-delete btn" (click)="addQuestion()">
+              اضافة
+          </button>
+      </div>
 </div>
 
 
-<div class="box-item">
+<div class="box-item" *ngFor="let item of questions">
   <div class="name">
     <h3>
-      يراعي الفروق الفردية والخائص النفسية للطلبة
+      {{item.question}}
     </h3>
   </div>
 
-  <div class="icons">
-    <i class="fas fa-trash-alt fa-2x"></i>
-  </div>
-</div>
-
-<div class="box-item">
-  <div class="name">
-    <h3>
-      يرحب بالمناقشة ويتقبل وجهة النظر الاخرى من الطلبة
-    </h3>
-  </div>
-  <div class="icons">
-    <i class="fas fa-trash-alt fa-2x"></i>
-  </div>
-</div>
-
-
-<div class="box-item">
-  <div class="name">
-    <h3>
-      يناقش اجابات الطلبة الخاظئة بمرونة ويصححها لهم
-    </h3>
-  </div>
-  <div class="icons">
-    <i class="fas fa-trash-alt fa-2x"></i>
-  </div>
-</div>
-
-<div class="box-item">
-  <div class="name">
-    <h3>
-      ينمي عند الطلبة اتجاهات وعادات واخلاق حميدة
-    </h3>
-  </div>
   <div class="icons">
     <i class="fas fa-trash-alt fa-2x"></i>
   </div>
