--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -40,16 +40,16 @@
         <tr>
           <td width="5%">1</td>
           <td width="60%">السؤال الاول</td>
-          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
-          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
-          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="1"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="1"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="1"></td>
         </tr>
         <tr>
           <td width="5%">1</td>
           <td width="60%">السؤال الثاني</td>
-          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
-          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
-          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="2"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="2"></td>
+          <td width="10%"><input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="2"></td>
         </tr>
         <tr>
           <td width="5%">3</td>
