--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -23,21 +23,27 @@ body {
 
 /* Title */
 
-.continer .page-title{
+.page-title{
     position: absolute;
     right: 50px;
-    top: 50px;
+    top: 30px;
     display: flex;
     justify-content: center;
     align-content: center;
-    align-items: center; 
+    align-items: center;
  }
 
 
-.continer .page-title h1 {
+.page-title h1 {
     text-align: right;
     font-size: 2vw;
 }
+
+.continer .page-title img {
+    width: 150px;
+    height: 150px;
+
+ }
 
 /* form continer */
 
@@ -67,13 +73,4 @@ p {
 
 .form-continer button {
     width: 10vw;
-}
-
-img {
-    position: absolute;
-    top: -110%;
-    left: -10%;
-    z-index: -1;
-    transform: rotate(-10deg);
-    width: 125%
 }
