--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,33 +1,14 @@
-<div class="navbar navbar-expand-lg navbar-light  nav-bar">
+<div class="main-nav">
 
-  <a class="navbar-brand" [routerLink]="['/management']" routerLinkActive="router-link-active">الرئيسية</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-  </button>
+    <div class="r-items">
+        <a [routerLink]="['/management']"> <i class="fas fa-home"></i> <span> الرئيسية </span></a>
+        <a [routerLink]="['/teachers']"> <i class="fas fa-users"></i> <span> الاساتذة </span></a>
+        <a [routerLink]="['/questions']"> <i class="far fa-list-alt"></i> <span> الاسئلة </span></a>
+        <a [routerLink]="['/generateKey']"> <i class="fas fa-key"></i> <span> الرموز </span></a>
+    </div>
 
-  <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+    <div class="l-items">
+        <a [routerLink]="['/login']"> <span> خروج </span> <i class="fas fa-user-alt-slash"></i> </a>
+    </div>
 
-        <ul class="navbar-nav">
-
-            <li class="nav-item active">
-                <a class="navbar-brand" [routerLink]="['/teachers']" routerLinkActive="router-link-active" >الكادر التدريسي</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="navbar-brand" [routerLink]="['/generateKey']" routerLinkActive="router-link-active">توليد الرموز</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="navbar-brand" [routerLink]="['/questions']" routerLinkActive="router-link-active"> ادارة الاسئلة</a>
-            </li>
-
-        </ul>
-
-        <ul class="navbar-nav">
-            <li class="signOut nav-item active ">
-                <a class="navbar-brand" href="#">تسجيل الخروج</a>
-            </li>
-        </ul>
-  </div>
 </div>
