--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -1,6 +1,12 @@
 <!-- the continer -->
 <div class="continer">
 
+
+    <!-- the title  -->
+    <div class="page-title">
+        <img src="../../assets/SciLogo.png" alt="">
+        <h1>عزيزي الطالب | عزيزتي الطالبة (يرجى الاجابة عن الفقرات الاتية بدقة وموضوعية ولا داعي لذكر الاسم) </h1>
+      </div>
   <!-- page title
     <div class="page-title">
         <h1>عزيزي الطالب | عزيزتي الطالبة (يرجى الاجابة عن الفقرات الاتية بدقة وموضوعية ولا داعي لذكر الاسم) </h1>
