--- a/src/app/evaluation/evaluation.component.css
+++ b/src/app/evaluation/evaluation.component.css
@@ -11,7 +11,7 @@
 }
 
 .table-continer {
-    width: 55vw;
+    width: 88vw;
     margin: 10px 0 0 0;
 }
 
@@ -23,26 +23,38 @@ td, th {
 }
 
 .select-tech {
-    width: 55vw;
+
+    width: 88vw;
     /* padding: 40px; */
+    margin: 200px 0 0 0;
 }
 
 label {
-    margin: 5px 10px;
+    margin: 0px 10px;
 }
 /* Title */
 
 .continer .page-title {
-    color: rgb(0, 0, 0);
     position: absolute;
-    right: 50px;
-    top: 50px;
+    right: 30px;
+    top: 30px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 .continer .page-title h1 {
     text-align: right;
+    font-size: 2vw;
+}
+img {
+    width: 150px;
+    height: 150px;
 }
 
 textarea {
     margin: 20px 0 10px 0;
 }
+
+
