ٍSolve Problem Generate Number

--- a/src/app/generate-key/generate-key.component.html
+++ b/src/app/generate-key/generate-key.component.html
@@ -32,3 +32,5 @@
 
     <a class="my-btn btn btn-primary select-2" href="#" role="button" style="width: fit-content">توليد الرموز</a>
 </div>
+
+<button (click)="getRandomNumber(10)"> Generate Number </button>
