--- a/src/app/generate-key/generate-key.component.html
+++ b/src/app/generate-key/generate-key.component.html
@@ -30,7 +30,10 @@
         <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
     </div>
 
-    <a class="my-btn btn btn-primary select-2" href="#" role="button" style="width: fit-content">توليد الرموز</a>
+    <a  class="my-btn btn btn-primary select-2" 
+        role="button" style="width: fit-content"
+        (click)="getRandomNumber(10)">
+        توليد الرموز
+    </a>
 </div>
 
-<button (click)="getRandomNumber(10)"> Generate Number </button>
