--- a/src/app/evaluation/evaluation.component.css
+++ b/src/app/evaluation/evaluation.component.css
@@ -15,6 +15,10 @@
     margin: 10px 0 0 0;
 }
 
+.radio-btn {
+    margin: 10px 20px;
+}
+ 
 td, th {
     text-align: center;
     /* center checkbox horizontally */
@@ -26,18 +30,11 @@ td, th {
 
     width: 88vw;
     /* padding: 40px; */
-    margin: 200px 0 0 0;
 }
 
-label {
-    margin: 0px 10px;
-}
 /* Title */
 
 .continer .page-title {
-    position: absolute;
-    right: 30px;
-    top: 30px;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -45,16 +42,28 @@ label {
 }
 
 .continer .page-title h1 {
-    text-align: right;
     font-size: 2vw;
 }
-img {
-    width: 150px;
-    height: 150px;
+
+.note {
+    margin-top: 30px;
+    text-align: right !important;
+    font-weight: 400;
+}
+
+
+.logo-img {
+    width: 20%;
+    margin: 30px;
 }
 
 textarea {
     margin: 20px 0 10px 0;
+}
+
+table {
+    background-color: #fcfcfc !important;
+    border-radius: 7px;
 }
 
 
