--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -32,7 +32,9 @@
 <div class="box-item">
     <div class="name">  <h3> أ. م. حازم نومان عبد </h3>  </div>
     <div class="progress">
-        <div style="width:90%"> <span> 90% &nbsp;</span> </div>
+        <div  style="width:70%"> <span class="yes" > 90% &nbsp;</span> </div>
+        <div  style="width:30%"> <span class="some"> 30% &nbsp;</span> </div>
+        <div  style="width:20%"> <span class="no"  > 20% &nbsp;</span> </div>
         <P> عدد الطلاب الذين قامو بالتصويت : 20</P>
     </div>
 </div>
@@ -41,7 +43,9 @@
 <div class="box-item">
     <div class="name">  <h3> أ. م. طه عبد علي </h3>  </div>
     <div class="progress">
-        <div style="width:70%"> <span> 70% &nbsp;</span> </div>
+        <div  style="width:70%"> <span class="yes" > 90% &nbsp;</span> </div>
+        <div  style="width:30%"> <span class="some"> 30% &nbsp;</span> </div>
+        <div  style="width:20%"> <span class="no"  > 20% &nbsp;</span> </div>
         <P> عدد الطلاب الذين قامو بالتصويت : 30</P>
     </div>
 </div>
@@ -51,7 +55,9 @@
 <div class="box-item">
     <div class="name">  <h3> أ. م. علي عبد الرحمن </h3>  </div>
     <div class="progress">
-        <div style="width:80%"> <span> 80% &nbsp;</span> </div>
+        <div  style="width:70%"> <span class="yes" > 90% &nbsp;</span> </div>
+        <div  style="width:30%">  <span class="some"> 30% &nbsp;</span> </div>
+        <div  style="width:20%"> <span class="no"  > 20% &nbsp;</span> </div>
         <P> عدد الطلاب الذين قامو بالتصويت : 55</P>
     </div>
 </div>
